[tool.poetry]
name = "url_shortener"
version = "1.0.0"
description = ""
authors = ["przdeb <debickiprzemek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
hashids = "^1.3.1"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
